fix: handle overflow with archive-item

--- a/assets/css/_partial/_archive/_terms.scss
+++ b/assets/css/_partial/_archive/_terms.scss
@@ -78,6 +78,7 @@
   text-align: right;
   color: $global-font-secondary-color;
   font-variant-numeric: tabular-nums;
+  min-width: fit-content;
   [theme=dark] & {
     color: $global-font-secondary-color-dark;
   }
